--- a/maps.html
+++ b/maps.html
@@ -14,12 +14,9 @@
 
     <!--CONTROLLARE RESPONSIVE, DROPDOWN CITTA CREA PROBLEMI //non fa parte del div NAVBAR-BRAND-->
     <nav class="navbar center navbar-expand-lg bg-light">
-        <div class="container-fluid">
+        <div class="container-fluid wrapper">
           <a class="navbar-brand" href="#">ExplorSigns</a>
           <div class="dropdown navbar-brand">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownComo" data-bs-toggle="dropdown" aria-expanded="false">
-                Como
-            </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownComo">
                 <!--<form class="d-flex pr-5 pl-5" role="search">
                     <input class="form-control me-2 ml-2 mr-2" type="search" placeholder="Search" aria-label="Search">
@@ -42,7 +39,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Mappa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Il progetto</a>
+                <a class="nav-link" href="https://github.com/walterdn03/exploresigns/blob/2649be0335f301d930b5761723612b0d53a09b60/README.md">Il progetto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Aggiungi insegne</a>
@@ -56,7 +53,7 @@
         </div>
       </nav>
 
-    <div id="wrapper">
+    <div class="wrapper">
         <div id="map" style="height: 800px;"></div>
     </div>
 
