--- a/maps.html
+++ b/maps.html
@@ -32,6 +32,10 @@
           
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              
+              <li class="nav-item">
+                <a class="nav-link" href="https://ixd-supsi.github.io/2024/progetti/1_XS">Index</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
               </li>
